Fix missing stretch for image in TeaserGrid

--- a/patterns/core/TeaserGrid/teaserGrid.styl
+++ b/patterns/core/TeaserGrid/teaserGrid.styl
@@ -52,6 +52,7 @@ $breakpoint-huge = 1400px
 
     img
       width 100%
+      height 100%
       object-fit cover
 
   .heading
